updated java, gradle; all files now in java